# openaedmap-backend

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  Pipfile  README.md  alembic.ini  config.py  country_code_assigner.py  country_from_osm.py  db.py  default.nix  default.vcl  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  json_response.py  main.py  natural_earth.py  openstreetmap.py  orjson_response.py  osm_change.py  osm_countries.py  overpass.py  pkgs.nix  planet_diffs.py  pyproject.toml  requirements.txt  setup.py  shell.nix  state_utils.py  transaction.py  utils.py  xmltodict_postprocessor.py
.directory/workflows/: deploy-dev.yaml
.github/workflows/: ci_test.yml  deploy-dev.yaml  deploy-main.yaml  deploy.yaml
alembic_/: env.py  script.py.mako
alembic_/versions/: 2024_04_02_1819-9f60c90e8a21_initial_migration.py  2024_12_29_0753-612257f82942_postgis_update.py  2026_04_22_0955-2f0c5a9d3f13_broaden_country_geometry_type.py
api/v1/: __init__.py  api.py  countries.py  node.py  photos.py  tile.py
backend/: __init__.py  country_parser.py  cron_functions.py  data_file_generator.py  init_functions.py  main.py  osm_loader.py  test_data_file_generator.py  utils.py
backend/api/: deps.py
backend/api/v1/: api.py  countries.py  metadata.py  osm_nodes.py  queues.py  test_osm_nodes.py  tiles.py
backend/core/: config.py
backend/crud/: countries.py  metadata.py  osm_nodes.py  osm_nodes_views.py  queues.py  tiles.py
backend/database/: session.py
backend/database/stored_procedures/: abbreviated.sql  get_tile_names.sql  get_tile_names_for_nonempty.sql  mvt.sql  mvt_clustered.sql  mvt_countries.sql  mvt_unclustered.sql  queue_all_tiles.sql  xyz_helper_functions.sql
backend/models/: __init__.py  countries.py  countries_queue.py  metadata.py  osm_node_views.py  osm_nodes.py  osm_nodes_views.py  temp_node_changes.py  tiles.py  tiles_queue.py
backend/schemas/: countries.py  metadata.py  osm_node_views.py  osm_nodes.py  tiles.py
config/: alembic.ini  postgres.conf  redis.conf  supervisord.conf  valkey.conf  varnish.vcl
cython_lib/: geo_utils.py
envs/app/: dev.env  main.env
envs/compose/: dev.env  main.env
middlewares/: cache_control_middleware.py  cache_middleware.py  cache_response_middleware.py  compress_middleware.py  profiler_middleware.py  skip_serialization.py  version_middleware.py
migrations/: env.py
migrations/versions/: 0efac400a003_refactor_update_process.py  1383818297e9_changed_tiles_queue_table_to_logged.py  283357f19e40_initial_model.py  3355cad7c5bd_initial_model.py  656be64c79a3_added_tiles_expired_queue_table.py  6869b62d529b_added_tiles_functions.py  6c7bdd3e1794_added_reload_all_tiles_procedure.py  6dcbb5d299d3_refactor_for_performance.py  9e2034191715_added_more_fields_to_osm_nodes.py  a3688824e614_clean_up_old_objects.py  bfc8c7757aa3_adjusted_mvt_and_mvt_countries_functions.py  c738991beb3c_fixed_mvt_clustered_function.py  cfe13af7230d_updated_reload_all_tiles_procedure.py  e9c0b3b9c2cb_added_tiles_cache_table.py
models/: aed.py  aed_group.py  bbox.py  cached_response.py  country.py  geometry.py  lonlat.py  osm_country.py  photo_info.py  photo_report.py
models/db/: __init__.py  aed.py  base.py  country.py  created_at_mixin.py  photo.py  photo_report.py  state.py
nginx/: nginx-proxy-dev.conf  nginx-proxy-prod.conf
old/scripts/: generate_country_lookup_file.py  process_planet_file.py  requirements.txt
scripts/: mongo-init-replica.sh
services/: aed_service.py  country_service.py  photo_report_service.py  photo_service.py  state_service.py  worker_service.py
states/: aed_state.py  country_state.py  photo_report_state.py  photo_state.py  worker_state.py
validators/: geometry.py
